# classy

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
classy/: __init__.py  cache.py  classify.py  cli.py  config.py  core.py  data.py  decision_tree.py  defs.py  feature.py  gmm.py  gui.py  index.py  log.py  logging.py  mcfa.py  mixnorm.py  plotting.py  preprocessing.py  progress.py  spectra.py  tools.py
classy/data/gmm/: gmm_10.pkl  gmm_13.pkl  gmm_19.pkl  gmm_24.pkl  gmm_37.pkl  gmm_4.pkl  gmm_41.pkl
classy/data/mcfa/: mcfa.pkl
classy/data/mixnorm/: mixnorm.pkl  neighbours.csv
classy/features/: __init__.py  feature.py  gui.py
classy/index/: __init__.py  cache.py  data.py  index.py  phase.py
classy/sources/: __init__.py  akari.py  ecas.py  gaia.py  m4ast.py  manos.py  mithneos.py  pds.py  private.py  s3os2.py  smass.py
classy/sources/cds/: J_AA_568_L7.py  __init__.py  j_aa_568_l7.py  j_aa_627_a124.py
classy/sources/pds/: __init__.py  ecas.py  fornasier_m_types.py  fornasier_trojans.py  ftcas.py  gartrelleetal.py  hardersenspec.py  hendrix_iue.py  irtf.py  lebofsky_three_micron.py  moskovitz_v_types.py  primass.py  reddy_main_belt.py  reddy_nea.py  reddy_nea_mc.py  reddy_vesta.py  rivkin_three_micron.py  s3os2.py  sawyer.py  scas.py  tfcas.py  vilas.py  willman_iannini.py
classy/taxonomies/: __init__.py  bus.py  demeo.py  mahlke.py  tholen.py
classy/taxonomies/mahlke/: __init__.py  decision_tree.py  defs.py  gmm.py  mixnorm.py
classy/utils/: __init__.py  download.py  progress.py  tools.py
data/: ReadMe
data/csv/: class_asteroids.csv  class_templates.csv
data/demeo2009/: scores.csv  templates.csv
data/gmm/: gmm_23.pkl  gmm_29.pkl  gmm_31.pkl  gmm_43.pkl  gmm_44.pkl  gmm_8.pkl  gmm_emp.pkl
data/m4ast/: m4ast.csv
data/mahlke2022/csv/: class_vis.csv  class_visnir.csv  reference_albedo.csv  reference_spectra.csv
data/mahlke2022/txt/: refalbed.txt  refspect.txt  template.txt
data/mithneos/: obslog.csv
data/smass/: index.csv  obslog.csv
data/txt/: asteroid.txt
docs/: advanced.rst  appendix.rst  basic_usage.rst  classifying.rst  cli.rst  conf.py  configuration.rst  core.rst  data.rst  export.rst  features.rst  getting_started.rst  glossary.rst  index.rst  manage.rst  preprocessing.rst  private.rst  requirements.txt  select.rst  spectra.rst  taxonomies.rst  taxonomy.rst  tutorial.rst
docs/_static/css/: custom.css
docs/data/: sp291.csv  sp80.csv
docs/gfx/classify/: make_figures.py
docs/sources/: 24cas.rst  52cas.rst  akari.rst  ecas.rst  gaia.rst  m4ast.rst  manos.rst  misc.rst  mithneos.rst  primass.rst  s3os2.rst  scas.rst  smass.rst  ssodnet.rst
docs/taxonomies/: demeo.rst  mahlke.rst  tholen.rst
tests/: conftest.py  test_00index.py  test_classify.py  test_cli.py  test_core.py  test_features.py  test_functional.py  test_index.py  test_plotting.py  test_preprocessing.py  test_smoothing.py  test_sources.py
tests/data/: demeo2009_splined_spectra.csv  ecas_colors.csv  smass2_51.txt  spectra_preprocessed.csv  tholen1984_scores.csv
