[tool.poetry]
name = "space-classy"
version = "0.3.3"
description = "classification tool for minor bodies using reflectance spectra and visual albedos"
authors = ["Max Mahlke <max.mahlke@oca.eu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/maxmahlke/classy"
documentation = "https://classy.readthedocs.io/en/latest/"
repository = "https://github.com/maxmahlke/classy.git"
packages = [{'include' = 'classy'}]
include = ["data/mixnorm", 'data/mcfa']

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
sphinx = {version = "^4", optional = true}
sphinx-redactor-theme = {version = "^0.0.1", optional = true}
sphinx-hoverxref = {version = "*", optional = true}
jinja2 = {version = "<3.1", optional = true}
mcfa = "^0.1"
pandas = "^1.4.2"
numpy = "^1.22.3"
click = "^8.1.2"
rich = "^12.2.0"
sphinx_design = "^0.3.0"
sphinx-copybutton = "^0.5.0"
furo = "^2022.9.15"
scikit-learn = "^1.2.1"
space-rocks = "^1.7.2"
tox = "^4.4.5"
importlib-resources = "^5.10.2"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-redactor-theme"]

[tool.poetry.dev-dependencies]
sphinx-redactor-theme = "^0.0.1"
sphinx-hoverxref = {version = "*", optional = true}
jinja2 = "<3.1"

[tool.pytest.ini_options]
addopts = "-v --cov=classy --cov-report html"

[tool.poetry.scripts]
classy = "classy.cli:cli_classy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
